# surge

./: .gitignore  README.md  docker  main.py  make_files.sh  requirements.txt  runme.sh
Abstract/: laneDetection.py  maskSize.py  test_LaneDetection.py
Percieve/: Lanedetection.py  YoloObjectDetection.py  advancedLane.py  camera.py  cameracalibration.py  collision.py  driverdrowsinessdetection.py  edgeDetection.py  laneDetection.c  laneDetection.py  laneDetection.pyx  preprocessimages.py  semanticshit.py  setup.py  test_Lanedetection.py  tracker.py  trafficsigndetector.py
Plan/: DeepDriver.py  example_pathplanning.py  fastslam.py  localization.c  localization.html  localization.py  localization.pyx  routing.py  setup.py  slam.py
Sense/: kalman.py  particle_filter.py  test_kalman.py
drivermonitoring/: .gitignore  README.md  abstract.py  cnn.py  cpu.py  distracted.py  enviroment.py  face.c  face.py  install.sh  main.py  neuralnet.py  run.sh  setup.sh  stream.py  test_enviroment.py  test_face.py  trash.py
drivermonitoring/c code/: enviroment.c
drivermonitoring/cythonDebug/: enviroment.html  face.html
drivermonitoring/depricated/: driverdrowsiness.py  enviroment.c
drivermonitoring/depricated code/: enviroment.pyx  face.pyx  setup.py
drivermonitoring/docs/: issues.md
drivermonitoring/examples/: mnist.py  xor.py
drivermonitoring/fleet webapp/: index.html
drivermonitoring/java/: .classpath  .project
drivermonitoring/rust/: Cargo.toml
drivermonitoring/rust/src/: main.rs
stats/: self_driving_stats.prof
tests/: test_LaneDetection.py
(+105 files in other folders)
