[package]
name = "rust"
version = "0.1.0"
edition = "2018"
authors = ["FESTUS MURIMI <murimifestus09@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.17.0"

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]